seaqt/QtWidgets/gen_qtreewidget.h

class QBrush;
class QColor;
class QDataStream;
class QFont;
class QIcon;
class QSize;
class QTreeWidget;
class QTreeWidgetItem;
class QVariant;
typedef struct QBrush QBrush;
typedef struct QColor QColor;
typedef struct QDataStream QDataStream;
typedef struct QFont QFont;
typedef struct QIcon QIcon;
typedef struct QMargins QMargins;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QRegion QRegion;
typedef struct QSize QSize;
typedef struct QStyleOptionFrame QStyleOptionFrame;
typedef struct QTreeWidget QTreeWidget;
typedef struct QTreeWidgetItem QTreeWidgetItem;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
struct QTreeWidget_VTable {
	void (*destructor)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self);
	QMetaObject* (*metaObject)(struct QTreeWidget_VTable* vtbl, const QTreeWidget* self);
	void* (*metacast)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, const char* param1);
	int (*metacall)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, int param1, int param2, void** param3);
	void (*setSelectionModel)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QItemSelectionModel* selectionModel);
	bool (*event)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QEvent* e);
	struct miqt_array /* of struct miqt_string */  (*mimeTypes)(struct QTreeWidget_VTable* vtbl, const QTreeWidget* self);
	QMimeData* (*mimeData)(struct QTreeWidget_VTable* vtbl, const QTreeWidget* self, struct miqt_array /* of QTreeWidgetItem* */  items);
	bool (*dropMimeData)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QTreeWidgetItem* parent, int index, QMimeData* data, int action);
	int (*supportedDropActions)(struct QTreeWidget_VTable* vtbl, const QTreeWidget* self);
	void (*dropEvent)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QDropEvent* event);
	void (*setRootIndex)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QModelIndex* index);
	void (*keyboardSearch)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, struct miqt_string search);
	QRect* (*visualRect)(struct QTreeWidget_VTable* vtbl, const QTreeWidget* self, QModelIndex* index);
	void (*scrollTo)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QModelIndex* index, int hint);
	QModelIndex* (*indexAt)(struct QTreeWidget_VTable* vtbl, const QTreeWidget* self, QPoint* p);
	void (*doItemsLayout)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self);
	void (*reset)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self);
	void (*dataChanged)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QModelIndex* topLeft, QModelIndex* bottomRight, struct miqt_array /* of int */  roles);
	void (*selectAll)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self);
	void (*verticalScrollbarValueChanged)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, int value);
	void (*scrollContentsBy)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, int dx, int dy);
	void (*rowsInserted)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QModelIndex* parent, int start, int end);
	void (*rowsAboutToBeRemoved)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QModelIndex* parent, int start, int end);
	QModelIndex* (*moveCursor)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, int cursorAction, int modifiers);
	int (*horizontalOffset)(struct QTreeWidget_VTable* vtbl, const QTreeWidget* self);
	int (*verticalOffset)(struct QTreeWidget_VTable* vtbl, const QTreeWidget* self);
	void (*setSelection)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QRect* rect, int command);
	QRegion* (*visualRegionForSelection)(struct QTreeWidget_VTable* vtbl, const QTreeWidget* self, QItemSelection* selection);
	struct miqt_array /* of QModelIndex* */  (*selectedIndexes)(struct QTreeWidget_VTable* vtbl, const QTreeWidget* self);
	void (*timerEvent)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QTimerEvent* event);
	void (*paintEvent)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QPaintEvent* event);
	void (*drawRow)(struct QTreeWidget_VTable* vtbl, const QTreeWidget* self, QPainter* painter, QStyleOptionViewItem* options, QModelIndex* index);
	void (*drawBranches)(struct QTreeWidget_VTable* vtbl, const QTreeWidget* self, QPainter* painter, QRect* rect, QModelIndex* index);
	void (*mousePressEvent)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QMouseEvent* event);
	void (*mouseReleaseEvent)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QMouseEvent* event);
	void (*mouseDoubleClickEvent)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QMouseEvent* event);
	void (*mouseMoveEvent)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QMouseEvent* event);
	void (*keyPressEvent)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QKeyEvent* event);
	void (*dragMoveEvent)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QDragMoveEvent* event);
	bool (*viewportEvent)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QEvent* event);
	void (*updateGeometries)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self);
	QSize* (*viewportSizeHint)(struct QTreeWidget_VTable* vtbl, const QTreeWidget* self);
	int (*sizeHintForColumn)(struct QTreeWidget_VTable* vtbl, const QTreeWidget* self, int column);
	void (*horizontalScrollbarAction)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, int action);
	bool (*isIndexHidden)(struct QTreeWidget_VTable* vtbl, const QTreeWidget* self, QModelIndex* index);
	void (*selectionChanged)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QItemSelection* selected, QItemSelection* deselected);
	void (*currentChanged)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QModelIndex* current, QModelIndex* previous);
	int (*sizeHintForRow)(struct QTreeWidget_VTable* vtbl, const QTreeWidget* self, int row);
	QVariant* (*inputMethodQuery)(struct QTreeWidget_VTable* vtbl, const QTreeWidget* self, int query);
	void (*updateEditorData)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self);
	void (*updateEditorGeometries)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self);
	void (*verticalScrollbarAction)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, int action);
	void (*horizontalScrollbarValueChanged)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, int value);
	void (*closeEditor)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QWidget* editor, int hint);
	void (*commitData)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QWidget* editor);
	void (*editorDestroyed)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QObject* editor);
	bool (*edit2)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QModelIndex* index, int trigger, QEvent* event);
	int (*selectionCommand)(struct QTreeWidget_VTable* vtbl, const QTreeWidget* self, QModelIndex* index, QEvent* event);
	void (*startDrag)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, int supportedActions);
	QStyleOptionViewItem* (*viewOptions)(struct QTreeWidget_VTable* vtbl, const QTreeWidget* self);
	bool (*focusNextPrevChild)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, bool next);
	void (*dragEnterEvent)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QDragEnterEvent* event);
	void (*dragLeaveEvent)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QDragLeaveEvent* event);
	void (*focusInEvent)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QFocusEvent* event);
	void (*focusOutEvent)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QFocusEvent* event);
	void (*resizeEvent)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QResizeEvent* event);
	void (*inputMethodEvent)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QInputMethodEvent* event);
	bool (*eventFilter)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QObject* object, QEvent* event);
	QSize* (*minimumSizeHint)(struct QTreeWidget_VTable* vtbl, const QTreeWidget* self);
	QSize* (*sizeHint)(struct QTreeWidget_VTable* vtbl, const QTreeWidget* self);
	void (*setupViewport)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QWidget* viewport);
	void (*wheelEvent)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QWheelEvent* param1);
	void (*contextMenuEvent)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QContextMenuEvent* param1);
	void (*changeEvent)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QEvent* param1);
	int (*devType)(struct QTreeWidget_VTable* vtbl, const QTreeWidget* self);
	void (*setVisible)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, bool visible);
	int (*heightForWidth)(struct QTreeWidget_VTable* vtbl, const QTreeWidget* self, int param1);
	bool (*hasHeightForWidth)(struct QTreeWidget_VTable* vtbl, const QTreeWidget* self);
	QPaintEngine* (*paintEngine)(struct QTreeWidget_VTable* vtbl, const QTreeWidget* self);
	void (*keyReleaseEvent)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QKeyEvent* event);
	void (*enterEvent)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QEvent* event);
	void (*leaveEvent)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QEvent* event);
	void (*moveEvent)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QMoveEvent* event);
	void (*closeEvent)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QCloseEvent* event);
	void (*tabletEvent)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QTabletEvent* event);
	void (*actionEvent)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QActionEvent* event);
	void (*showEvent)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QShowEvent* event);
	void (*hideEvent)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QHideEvent* event);
	bool (*nativeEvent)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, struct miqt_string eventType, void* message, long* result);
	int (*metric)(struct QTreeWidget_VTable* vtbl, const QTreeWidget* self, int param1);
	void (*initPainter)(struct QTreeWidget_VTable* vtbl, const QTreeWidget* self, QPainter* painter);
	QPaintDevice* (*redirected)(struct QTreeWidget_VTable* vtbl, const QTreeWidget* self, QPoint* offset);
	QPainter* (*sharedPainter)(struct QTreeWidget_VTable* vtbl, const QTreeWidget* self);
	void (*childEvent)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QChildEvent* event);
	void (*customEvent)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QEvent* event);
	void (*connectNotify)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QMetaMethod* signal);
	void (*disconnectNotify)(struct QTreeWidget_VTable* vtbl, QTreeWidget* self, QMetaMethod* signal);
};
QTreeWidget* QTreeWidget_new(struct QTreeWidget_VTable* vtbl, QWidget* parent);
QTreeWidget* QTreeWidget_new2(struct QTreeWidget_VTable* vtbl);
void QTreeWidget_connect_itemPressed(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, int), void (*release)(intptr_t));
void QTreeWidget_connect_itemClicked(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, int), void (*release)(intptr_t));
void QTreeWidget_connect_itemDoubleClicked(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, int), void (*release)(intptr_t));
void QTreeWidget_connect_itemActivated(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, int), void (*release)(intptr_t));
void QTreeWidget_connect_itemEntered(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, int), void (*release)(intptr_t));
void QTreeWidget_connect_itemChanged(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, int), void (*release)(intptr_t));
void QTreeWidget_connect_itemExpanded(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*), void (*release)(intptr_t));
void QTreeWidget_connect_itemCollapsed(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*), void (*release)(intptr_t));
void QTreeWidget_connect_currentItemChanged(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t, QTreeWidgetItem*, QTreeWidgetItem*), void (*release)(intptr_t));
void QTreeWidget_connect_itemSelectionChanged(QTreeWidget* self, intptr_t slot, void (*callback)(intptr_t), void (*release)(intptr_t));
int QTreeWidget_protectedbase_verticalStepsPerItem(const void* self);
int QTreeWidget_protectedbase_state(const void* self);
void QTreeWidget_protectedbase_setState(void* self, int state);
void QTreeWidget_protectedbase_scheduleDelayedItemsLayout(void* self);
void QTreeWidget_protectedbase_executeDelayedItemsLayout(void* self);
void QTreeWidget_protectedbase_setDirtyRegion(void* self, QRegion* region);
void QTreeWidget_protectedbase_scrollDirtyRegion(void* self, int dx, int dy);
QPoint* QTreeWidget_protectedbase_dirtyRegionOffset(const void* self);
void QTreeWidget_protectedbase_startAutoScroll(void* self);
void QTreeWidget_protectedbase_stopAutoScroll(void* self);
void QTreeWidget_protectedbase_doAutoScroll(void* self);
int QTreeWidget_protectedbase_dropIndicatorPosition(const void* self);
void QTreeWidget_protectedbase_setViewportMargins(void* self, int left, int top, int right, int bottom);
QMargins* QTreeWidget_protectedbase_viewportMargins(const void* self);
void QTreeWidget_protectedbase_drawFrame(void* self, QPainter* param1);
void QTreeWidget_protectedbase_initStyleOption(const void* self, QStyleOptionFrame* option);
void QTreeWidget_protectedbase_updateMicroFocus(void* self);
void QTreeWidget_protectedbase_create(void* self);
void QTreeWidget_protectedbase_destroy(void* self);
bool QTreeWidget_protectedbase_focusNextChild(void* self);
bool QTreeWidget_protectedbase_focusPreviousChild(void* self);
QObject* QTreeWidget_protectedbase_sender(const void* self);
int QTreeWidget_protectedbase_senderSignalIndex(const void* self);
int QTreeWidget_protectedbase_receivers(const void* self, const char* signal);
bool QTreeWidget_protectedbase_isSignalConnected(const void* self, QMetaMethod* signal);
const QMetaObject* QTreeWidget_staticMetaObject();
void QTreeWidget_delete(QTreeWidget* self);