seaqt/QtWidgets/gen_qtreewidget.nim

proc fcQTreeWidget_protectedbase_verticalStepsPerItem(self: pointer, ): cint {.importc: "QTreeWidget_protectedbase_verticalStepsPerItem".}
proc fcQTreeWidget_protectedbase_state(self: pointer, ): cint {.importc: "QTreeWidget_protectedbase_state".}
proc fcQTreeWidget_protectedbase_setState(self: pointer, state: cint): void {.importc: "QTreeWidget_protectedbase_setState".}
proc fcQTreeWidget_protectedbase_scheduleDelayedItemsLayout(self: pointer, ): void {.importc: "QTreeWidget_protectedbase_scheduleDelayedItemsLayout".}
proc fcQTreeWidget_protectedbase_executeDelayedItemsLayout(self: pointer, ): void {.importc: "QTreeWidget_protectedbase_executeDelayedItemsLayout".}
proc fcQTreeWidget_protectedbase_setDirtyRegion(self: pointer, region: pointer): void {.importc: "QTreeWidget_protectedbase_setDirtyRegion".}
proc fcQTreeWidget_protectedbase_scrollDirtyRegion(self: pointer, dx: cint, dy: cint): void {.importc: "QTreeWidget_protectedbase_scrollDirtyRegion".}
proc fcQTreeWidget_protectedbase_dirtyRegionOffset(self: pointer, ): pointer {.importc: "QTreeWidget_protectedbase_dirtyRegionOffset".}
proc fcQTreeWidget_protectedbase_startAutoScroll(self: pointer, ): void {.importc: "QTreeWidget_protectedbase_startAutoScroll".}
proc fcQTreeWidget_protectedbase_stopAutoScroll(self: pointer, ): void {.importc: "QTreeWidget_protectedbase_stopAutoScroll".}
proc fcQTreeWidget_protectedbase_doAutoScroll(self: pointer, ): void {.importc: "QTreeWidget_protectedbase_doAutoScroll".}
proc fcQTreeWidget_protectedbase_dropIndicatorPosition(self: pointer, ): cint {.importc: "QTreeWidget_protectedbase_dropIndicatorPosition".}
proc fcQTreeWidget_protectedbase_setViewportMargins(self: pointer, left: cint, top: cint, right: cint, bottom: cint): void {.importc: "QTreeWidget_protectedbase_setViewportMargins".}
proc fcQTreeWidget_protectedbase_viewportMargins(self: pointer, ): pointer {.importc: "QTreeWidget_protectedbase_viewportMargins".}
proc fcQTreeWidget_protectedbase_drawFrame(self: pointer, param1: pointer): void {.importc: "QTreeWidget_protectedbase_drawFrame".}
proc fcQTreeWidget_protectedbase_initStyleOption(self: pointer, option: pointer): void {.importc: "QTreeWidget_protectedbase_initStyleOption".}
proc fcQTreeWidget_protectedbase_updateMicroFocus(self: pointer, ): void {.importc: "QTreeWidget_protectedbase_updateMicroFocus".}
proc fcQTreeWidget_protectedbase_create(self: pointer, ): void {.importc: "QTreeWidget_protectedbase_create".}
proc fcQTreeWidget_protectedbase_destroy(self: pointer, ): void {.importc: "QTreeWidget_protectedbase_destroy".}
proc fcQTreeWidget_protectedbase_focusNextChild(self: pointer, ): bool {.importc: "QTreeWidget_protectedbase_focusNextChild".}
proc fcQTreeWidget_protectedbase_focusPreviousChild(self: pointer, ): bool {.importc: "QTreeWidget_protectedbase_focusPreviousChild".}
proc fcQTreeWidget_protectedbase_sender(self: pointer, ): pointer {.importc: "QTreeWidget_protectedbase_sender".}
proc fcQTreeWidget_protectedbase_senderSignalIndex(self: pointer, ): cint {.importc: "QTreeWidget_protectedbase_senderSignalIndex".}
proc fcQTreeWidget_protectedbase_receivers(self: pointer, signal: cstring): cint {.importc: "QTreeWidget_protectedbase_receivers".}
proc fcQTreeWidget_protectedbase_isSignalConnected(self: pointer, signal: pointer): bool {.importc: "QTreeWidget_protectedbase_isSignalConnected".}
proc fcQTreeWidget_new(vtbl: pointer, parent: pointer): ptr cQTreeWidget {.importc: "QTreeWidget_new".}
proc fcQTreeWidget_new2(vtbl: pointer, ): ptr cQTreeWidget {.importc: "QTreeWidget_new2".}
proc fcQTreeWidget_staticMetaObject(): pointer {.importc: "QTreeWidget_staticMetaObject".}
proc fcQTreeWidget_delete(self: pointer) {.importc: "QTreeWidget_delete".}

proc clone*(self: gen_qtreewidget_types.QTreeWidgetItem, ): gen_qtreewidget_types.QTreeWidgetItem =
  gen_qtreewidget_types.QTreeWidgetItem(h: fcQTreeWidgetItem_clone(self.h))

proc treeWidget*(self: gen_qtreewidget_types.QTreeWidgetItem, ): gen_qtreewidget_types.QTreeWidget =
  gen_qtreewidget_types.QTreeWidget(h: fcQTreeWidgetItem_treeWidget(self.h))

proc setSelected*(self: gen_qtreewidget_types.QTreeWidgetItem, select: bool): void =
  fcQTreeWidgetItem_setSelected(self.h, select)

proc isSelected*(self: gen_qtreewidget_types.QTreeWidgetItem, ): bool =
  fcQTreeWidgetItem_isSelected(self.h)

proc setHidden*(self: gen_qtreewidget_types.QTreeWidgetItem, hide: bool): void =
  fcQTreeWidgetItem_setHidden(self.h, hide)

proc isHidden*(self: gen_qtreewidget_types.QTreeWidgetItem, ): bool =
  fcQTreeWidgetItem_isHidden(self.h)

proc setExpanded*(self: gen_qtreewidget_types.QTreeWidgetItem, expand: bool): void =
  fcQTreeWidgetItem_setExpanded(self.h, expand)

proc isExpanded*(self: gen_qtreewidget_types.QTreeWidgetItem, ): bool =
  fcQTreeWidgetItem_isExpanded(self.h)

proc setFirstColumnSpanned*(self: gen_qtreewidget_types.QTreeWidgetItem, span: bool): void =
  fcQTreeWidgetItem_setFirstColumnSpanned(self.h, span)

proc isFirstColumnSpanned*(self: gen_qtreewidget_types.QTreeWidgetItem, ): bool =
  fcQTreeWidgetItem_isFirstColumnSpanned(self.h)

proc setDisabled*(self: gen_qtreewidget_types.QTreeWidgetItem, disabled: bool): void =
  fcQTreeWidgetItem_setDisabled(self.h, disabled)

proc isDisabled*(self: gen_qtreewidget_types.QTreeWidgetItem, ): bool =
  fcQTreeWidgetItem_isDisabled(self.h)

proc setChildIndicatorPolicy*(self: gen_qtreewidget_types.QTreeWidgetItem, policy: cint): void =
  fcQTreeWidgetItem_setChildIndicatorPolicy(self.h, cint(policy))

proc childIndicatorPolicy*(self: gen_qtreewidget_types.QTreeWidgetItem, ): cint =
  cint(fcQTreeWidgetItem_childIndicatorPolicy(self.h))

proc flags*(self: gen_qtreewidget_types.QTreeWidgetItem, ): cint =
  cint(fcQTreeWidgetItem_flags(self.h))

proc setFlags*(self: gen_qtreewidget_types.QTreeWidgetItem, flags: cint): void =
  fcQTreeWidgetItem_setFlags(self.h, cint(flags))

proc text*(self: gen_qtreewidget_types.QTreeWidgetItem, column: cint): string =
  let v_ms = fcQTreeWidgetItem_text(self.h, column)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setText*(self: gen_qtreewidget_types.QTreeWidgetItem, column: cint, text: string): void =
  fcQTreeWidgetItem_setText(self.h, column, struct_miqt_string(data: text, len: csize_t(len(text))))

proc icon*(self: gen_qtreewidget_types.QTreeWidgetItem, column: cint): gen_qicon_types.QIcon =
  gen_qicon_types.QIcon(h: fcQTreeWidgetItem_icon(self.h, column))

proc setIcon*(self: gen_qtreewidget_types.QTreeWidgetItem, column: cint, icon: gen_qicon_types.QIcon): void =
  fcQTreeWidgetItem_setIcon(self.h, column, icon.h)

proc statusTip*(self: gen_qtreewidget_types.QTreeWidgetItem, column: cint): string =
  let v_ms = fcQTreeWidgetItem_statusTip(self.h, column)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setStatusTip*(self: gen_qtreewidget_types.QTreeWidgetItem, column: cint, statusTip: string): void =
  fcQTreeWidgetItem_setStatusTip(self.h, column, struct_miqt_string(data: statusTip, len: csize_t(len(statusTip))))

proc toolTip*(self: gen_qtreewidget_types.QTreeWidgetItem, column: cint): string =
  let v_ms = fcQTreeWidgetItem_toolTip(self.h, column)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setToolTip*(self: gen_qtreewidget_types.QTreeWidgetItem, column: cint, toolTip: string): void =
  fcQTreeWidgetItem_setToolTip(self.h, column, struct_miqt_string(data: toolTip, len: csize_t(len(toolTip))))

proc whatsThis*(self: gen_qtreewidget_types.QTreeWidgetItem, column: cint): string =
  let v_ms = fcQTreeWidgetItem_whatsThis(self.h, column)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setWhatsThis*(self: gen_qtreewidget_types.QTreeWidgetItem, column: cint, whatsThis: string): void =
  fcQTreeWidgetItem_setWhatsThis(self.h, column, struct_miqt_string(data: whatsThis, len: csize_t(len(whatsThis))))

proc font*(self: gen_qtreewidget_types.QTreeWidgetItem, column: cint): gen_qfont_types.QFont =
  gen_qfont_types.QFont(h: fcQTreeWidgetItem_font(self.h, column))

proc setFont*(self: gen_qtreewidget_types.QTreeWidgetItem, column: cint, font: gen_qfont_types.QFont): void =
  fcQTreeWidgetItem_setFont(self.h, column, font.h)

proc textAlignment*(self: gen_qtreewidget_types.QTreeWidgetItem, column: cint): cint =
  fcQTreeWidgetItem_textAlignment(self.h, column)

proc setTextAlignment*(self: gen_qtreewidget_types.QTreeWidgetItem, column: cint, alignment: cint): void =
  fcQTreeWidgetItem_setTextAlignment(self.h, column, alignment)

proc backgroundColor*(self: gen_qtreewidget_types.QTreeWidgetItem, column: cint): gen_qcolor_types.QColor =
  gen_qcolor_types.QColor(h: fcQTreeWidgetItem_backgroundColor(self.h, column))

proc setBackgroundColor*(self: gen_qtreewidget_types.QTreeWidgetItem, column: cint, color: gen_qcolor_types.QColor): void =
  fcQTreeWidgetItem_setBackgroundColor(self.h, column, color.h)

proc background*(self: gen_qtreewidget_types.QTreeWidgetItem, column: cint): gen_qbrush_types.QBrush =
  gen_qbrush_types.QBrush(h: fcQTreeWidgetItem_background(self.h, column))

proc setBackground*(self: gen_qtreewidget_types.QTreeWidgetItem, column: cint, brush: gen_qbrush_types.QBrush): void =
  fcQTreeWidgetItem_setBackground(self.h, column, brush.h)

proc textColor*(self: gen_qtreewidget_types.QTreeWidgetItem, column: cint): gen_qcolor_types.QColor =
  gen_qcolor_types.QColor(h: fcQTreeWidgetItem_textColor(self.h, column))

proc setTextColor*(self: gen_qtreewidget_types.QTreeWidgetItem, column: cint, color: gen_qcolor_types.QColor): void =
  fcQTreeWidgetItem_setTextColor(self.h, column, color.h)

proc foreground*(self: gen_qtreewidget_types.QTreeWidgetItem, column: cint): gen_qbrush_types.QBrush =
  gen_qbrush_types.QBrush(h: fcQTreeWidgetItem_foreground(self.h, column))

proc setForeground*(self: gen_qtreewidget_types.QTreeWidgetItem, column: cint, brush: gen_qbrush_types.QBrush): void =
  fcQTreeWidgetItem_setForeground(self.h, column, brush.h)

proc checkState*(self: gen_qtreewidget_types.QTreeWidgetItem, column: cint): cint =
  cint(fcQTreeWidgetItem_checkState(self.h, column))

proc setCheckState*(self: gen_qtreewidget_types.QTreeWidgetItem, column: cint, state: cint): void =
  fcQTreeWidgetItem_setCheckState(self.h, column, cint(state))

proc sizeHint*(self: gen_qtreewidget_types.QTreeWidgetItem, column: cint): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fcQTreeWidgetItem_sizeHint(self.h, column))

proc setSizeHint*(self: gen_qtreewidget_types.QTreeWidgetItem, column: cint, size: gen_qsize_types.QSize): void =
  fcQTreeWidgetItem_setSizeHint(self.h, column, size.h)

proc data*(self: gen_qtreewidget_types.QTreeWidgetItem, column: cint, role: cint): gen_qvariant_types.QVariant =
  gen_qvariant_types.QVariant(h: fcQTreeWidgetItem_data(self.h, column, role))

proc setData*(self: gen_qtreewidget_types.QTreeWidgetItem, column: cint, role: cint, value: gen_qvariant_types.QVariant): void =
  fcQTreeWidgetItem_setData(self.h, column, role, value.h)

proc operatorLesser*(self: gen_qtreewidget_types.QTreeWidgetItem, other: gen_qtreewidget_types.QTreeWidgetItem): bool =
  fcQTreeWidgetItem_operatorLesser(self.h, other.h)

proc read*(self: gen_qtreewidget_types.QTreeWidgetItem, inVal: gen_qdatastream_types.QDataStream): void =
  fcQTreeWidgetItem_read(self.h, inVal.h)

proc write*(self: gen_qtreewidget_types.QTreeWidgetItem, outVal: gen_qdatastream_types.QDataStream): void =
  fcQTreeWidgetItem_write(self.h, outVal.h)

proc operatorAssign*(self: gen_qtreewidget_types.QTreeWidgetItem, other: gen_qtreewidget_types.QTreeWidgetItem): void =
  fcQTreeWidgetItem_operatorAssign(self.h, other.h)

proc parent*(self: gen_qtreewidget_types.QTreeWidgetItem, ): gen_qtreewidget_types.QTreeWidgetItem =
  gen_qtreewidget_types.QTreeWidgetItem(h: fcQTreeWidgetItem_parent(self.h))
